backend/kubernetes/manifests/kairos-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: kairos-deployment
  namespace: kairos
  labels:
    app: kairos
spec:
  replicas: 4
  selector:
    matchLabels:
      app: kairos
  template:
    metadata:
      labels:
        app: kairos
    spec:
      containers:
      - name: kairos
        image: 731706226892.dkr.ecr.ap-southeast-1.amazonaws.com/kairos-backend:latest
        imagePullPolicy: Always
        ports:
        - containerPort: 8000
      imagePullSecrets:
      - name: ecr-credentials
