backend/kubernetes/manifests/kairos-service.yml
apiVersion: v1
kind: Service
metadata:
  name: kairos-service
  namespace: kairos
  labels:
    app: kairos
  annotations:
    alb.ingress.kubernetes.io/target-type: ip
spec:
  selector:
    app: kairos
  ports:
  - port: 8000
    targetPort: 8000
    protocol: TCP
  type: ClusterIP
