backend/kubernetes/manifests/ingress-alb-service.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: kairos-ingress
  namespace: kairos
  labels:
    app: kairos
  annotations:
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/load-balancer-name: eks-app-cluster-alb
    alb.ingress.kubernetes.io/security-groups: kairos-alb-sg
    alb.ingress.kubernetes.io/healthcheck-path: /auth/admin/user-crud/
    alb.ingress.kubernetes.io/target-group-attributes: stickiness.enabled=true,stickiness.lb_cookie.duration_seconds=60
    alb.ingress.kubernetes.io/target-type: ip
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTP": 80}, {"HTTP": 8000}]'
spec:
  ingressClassName: alb
  rules:
  - http:
      paths:
      - backend:
          service:
            name: kairos-service
            port:
              number: 8000
        pathType: Prefix
        path: /
